<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">Einschlafen Podcast</string>
    <string name="feeds_label">Feeds</string>
    <string name="podcasts_label">PODCASTS</string>
    <string name="episodes_label">EPISODES</string>
    <string name="new_label">New</string>
    <string name="waiting_list_label">Waiting list</string>
    <string name="settings_label">Settings</string>
    <string name="add_new_feed_label">Add podcast</string>
    <string name="downloads_label">Downloads</string>
    <string name="cancel_download_label">Cancel Download</string>
    <string name="download_log_label">Download log</string>
    <string name="playback_history_label">Playback history</string>
    <string name="gpodnet_main_label">gpodder.net</string>
    <string name="gpodnet_auth_label">gpodder.net login</string>
    <string name="open_in_browser_label">Open in browser</string>
    <string name="copy_url_label">Copy URL</string>
    <string name="share_url_label">Share URL</string>
    <string name="copied_url_msg">Copied URL to clipboard.</string>
    <string name="clear_history_label">Clear history</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="author_label">Author</string>
    <string name="language_label">Language</string>
    <string name="podcast_settings_label">Settings</string>
    <string name="cover_label">Picture</string>
    <string name="error_label">Error</string>
    <string name="error_msg_prefix">An error occurred:</string>
    <string name="refresh_label">Refresh</string>
    <string name="external_storage_error_msg">No external storage is available. Please make sure that external storage is mounted so that the app can work properly.</string>
    <string name="chapters_label">Chapters</string>
    <string name="shownotes_label">Shownotes</string>
    <string name="description_label">Description</string>
    <string name="most_recent_prefix">Most Recent Episode:\u0020</string>
    <string name="episodes_suffix">\u0020episodes</string>
    <string name="published_prefix">Published:\u0020</string>
    <string name="length_prefix">Length:\u0020</string>
    <string name="size_prefix">Size:\u0020</string>
    <string name="processing_label">Processing</string>
    <string name="loading_label">Loading...</string>
    <string name="image_of_prefix">Image of:\u0020</string>
    <string name="save_username_password_label">Save username and password</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="feedurl_label">Feed URL</string>
    <string name="txtvfeedurl_label">Add Podcast by URL</string>
    <string name="podcastdirectories_label">Podcast directories</string>
    <string name="mark_all_read_label">Mark all as read</string>
    <string name="show_info_label">Show information</string>
    <string name="remove_feed_label">Remove Feed</string>
    <string name="share_link_label">Share website link</string>
    <string name="share_source_label">Share feed link</string>
    <string name="feed_delete_confirmation_msg">Please confirm that you want to delete this feed and ALL episodes of this feed that you have downloaded.</string>
    <string name="feed_remover_msg">Removing feed</string>
    <string name="download_label">Download</string>
    <string name="play_label">Play</string>
    <string name="pause_label">Pause</string>
    <string name="stream_label">Stream</string>
    <string name="remove_label">Remove</string>
    <string name="mark_read_label">Mark as read</string>
    <string name="mark_unread_label">Mark as unread</string>
    <string name="add_to_queue_label">Add to Queue</string>
    <string name="remove_from_queue_label">Remove from Queue</string>
    <string name="visit_website_label">Visit Website</string>
    <string name="support_label">Flattr this</string>
    <string name="enqueue_all_new">Enqueue all</string>
    <string name="download_all">Download all</string>
    <string name="skip_episode_label">Skip episode</string>
    <string name="download_successful">Download successful</string>
    <string name="download_failed">Download failed</string>
    <string name="download_pending">Download pending</string>
    <string name="download_running">Download running</string>
    <string name="download_error_device_not_found">Storage device not found</string>
    <string name="download_error_insufficient_space">Insufficient space</string>
    <string name="download_error_file_error">File error</string>
    <string name="download_error_http_data_error">HTTP Data Error</string>
    <string name="download_error_error_unknown">Unknown Error</string>
    <string name="download_error_parser_exception">Parser Exception</string>
    <string name="download_error_unsupported_type">Unsupported Feed type</string>
    <string name="download_error_connection_error">Connection error</string>
    <string name="download_error_unknown_host">Unknown host</string>
    <string name="cancel_all_downloads_label">Cancel all downloads</string>
    <string name="download_cancelled_msg">Download cancelled</string>
    <string name="download_report_title">Downloads completed</string>
    <string name="download_error_malformed_url">Malformed URL</string>
    <string name="download_error_io_error">IO Error</string>
    <string name="download_error_request_error">Request error</string>
    <string name="download_error_db_access">Database access error</string>
    <string name="downloads_left">\u0020Downloads left</string>
    <string name="download_notification_title">Downloading podcast data</string>
    <string name="download_report_content">%1$d downloads succeeded, %2$d failed</string>
    <string name="download_log_title_unknown">Unknown title</string>
    <string name="download_type_feed">Feed</string>
    <string name="download_type_media">Media file</string>
    <string name="download_type_image">Image</string>
    <string name="download_request_error_dialog_message_prefix">An error occurred when trying to download the file:\u0020</string>
    <string name="player_error_msg">Error!</string>
    <string name="player_stopped_msg">No media playing</string>
    <string name="player_preparing_msg">Preparing</string>
    <string name="player_ready_msg">Ready</string>
    <string name="player_seeking_msg">Seeking</string>
    <string name="playback_error_server_died">Server died</string>
    <string name="playback_error_unknown">Unknown Error</string>
    <string name="no_media_playing_label">No media playing</string>
    <string name="position_default_label">00:00:00</string>
    <string name="player_buffering_msg">Buffering</string>
    <string name="playbackservice_notification_title">Playing podcast</string>
    <string name="playbackservice_notification_content">Tap here for more info</string>
    <string name="show_download_log">Show Log</string>
    <string name="show_player_label">Show player</string>
    <string name="clear_queue_label">Clear queue</string>
    <string name="organize_queue_label">Organize queue</string>
    <string name="undo">Undo</string>
    <string name="removed_from_queue">Item removed</string>
    <string name="move_to_top_label">Move to top</string>
    <string name="move_to_bottom_label">Move to bottom</string>
    <string name="flattr_auth_label">Flattr sign-in</string>
    <string name="flattr_auth_explanation">Press the button below to start the authentication process. You will be forwarded to the flattr login screen in your browser and be asked to give AntennaPod the permission to flattr things. After you have given permission, you will return to this screen automatically.</string>
    <string name="authenticate_label">Authenticate</string>
    <string name="return_home_label">Return to home</string>
    <string name="flattr_auth_success">Authentication was successful! You can now flattr things within the app.</string>
    <string name="no_flattr_token_title">No Flattr token found</string>
    <string name="no_flattr_token_msg">Your flattr account does not seem to be connected to AntennaPod. You can either connect your account to AntennaPod to flattr things within the app or you can visit the website of the thing to flattr it there.</string>
    <string name="authenticate_now_label">Authenticate</string>
    <string name="action_forbidden_title">Action forbidden</string>
    <string name="action_forbidden_msg">AntennaPod has no permission for this action. The reason for this could be that the access token of AntennaPod to your account has been revoked. You can either re-reauthenticate or visit the website of the thing instead.</string>
    <string name="access_revoked_title">Access revoked</string>
    <string name="access_revoked_info">You have successfully revoked AntennaPod\'s access token to your account. In order to complete the process, you have to remove this app from the list of approved applications in your account settings on the flattr website.</string>
    <string name="flattr_click_success">Successfully flattred this thing!</string>
    <string name="flattring_label">Flattring</string>
    <string name="download_plugin_label">Download Plugin</string>
    <string name="no_playback_plugin_title">Plugin Not Installed</string>
    <string name="no_playback_plugin_msg">For variable speed playback to work, a third party library must be installed.\n\nTap \'Download Plugin\' to download a free plugin from the Play Store\n\nAny problems found using this plugin are not the responsibility of AntennaPod and should be reported to the plugin owner.</string>
    <string name="set_playback_speed_label">Playback Speeds</string>
    <string name="no_items_label">There are no items in this list.</string>
    <string name="no_feeds_label">You haven\'t subscribed to any feeds yet.</string>
    <string name="other_pref">Other</string>
    <string name="about_pref">About</string>
    <string name="queue_label">Queue</string>
    <string name="services_label">Services</string>
    <string name="flattr_label">Flattr</string>
    <string name="pref_pauseOnHeadsetDisconnect_sum">Pause playback when the headphones are disconnected</string>
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="playback_pref">Playback</string>
    <string name="network_pref">Network</string>
    <string name="pref_autoUpdateIntervall_title">Update interval</string>
    <string name="pref_autoUpdateIntervall_sum">Specify an interval in which the feeds are refreshed automatically or disable it</string>
    <string name="pref_downloadMediaOnWifiOnly_sum">Download media files only over WiFi</string>
    <string name="pref_followQueue_title">Continuous playback</string>
    <string name="pref_downloadMediaOnWifiOnly_title">WiFi media download</string>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones disconnect</string>
    <string name="pref_mobileUpdate_title">Mobile updates</string>
    <string name="pref_mobileUpdate_sum">Allow updates over the mobile data connection</string>
    <string name="refreshing_label">Refreshing</string>
    <string name="flattr_settings_label">Flattr settings</string>
    <string name="pref_flattr_auth_title">Flattr sign-in</string>
    <string name="pref_flattr_auth_sum">Sign in to your flattr account to flattr things directly from the app.</string>
    <string name="pref_flattr_this_app_title">Flattr this app</string>
    <string name="pref_flattr_this_app_sum">Support the development of AntennaPod by flattring it. Thanks!</string>
    <string name="pref_revokeAccess_title">Revoke access</string>
    <string name="rewind_label">Rewind</string>
    <string name="fast_forward_label">Fast forward</string>
</resources>